replace room id to slug
