# internal/message/handlers.go
@@ -5,8 +5,6 @@ import (
 	"lunar/internal/httputil"
 	"lunar/internal/pagination"
 	"net/http"
-
-	"github.com/google/uuid"
 )
 
 type Handler struct {
@@ -27,16 +25,16 @@ func NewHandler(validator *httputil.Validator, service *Service) *Handler {
 //	@Tags		message
 //	@Produce	json
 //	@Security	BearerAuth
-//	@Param		roomID	path		string	true	"Chat ID"
-//	@Param		limit	query		int		false	"Limit"
-//	@Param		cursor	query		string	false	"Cursor"
-//	@Success	200		{object}	GetPagingResponse
-//	@Failure	400		{object}	httputil.ErrorResponse
-//	@Failure	500		{object}	httputil.ErrorResponse
-//	@Router		/room/{roomID}/messages [get]
+//	@Param		roomSlug	path		string	true	"Room Slug"
+//	@Param		limit		query		int		false	"Limit"
+//	@Param		cursor		query		string	false	"Cursor"
+//	@Success	200			{object}	GetPagingResponse
+//	@Failure	400			{object}	httputil.ErrorResponse
+//	@Failure	500			{object}	httputil.ErrorResponse
+//	@Router		/rooms/{roomSlug}/messages [get]
 func (h *Handler) ListMessages(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	roomID := uuid.MustParse(r.PathValue("roomID"))
+	roomSlug := r.PathValue("roomSlug")
 	limit := normalizeLimit(r.URL.Query().Get("limit"), 100, 32)
 
 	var cursor *pagination.Cursor
@@ -49,9 +47,9 @@ func (h *Handler) ListMessages(w http.ResponseWriter, r *http.Request) {
 		cursor = &c
 	}
 
-	messages, err := h.service.ListMessages(ctx, roomID, limit, cursor)
+	messages, err := h.service.ListMessages(ctx, roomSlug, limit, cursor)
 	if err != nil {
-		if errors.Is(err, ErrChatNotFound) {
+		if errors.Is(err, ErrRoomNotFound) {
 			httputil.BadRequest(w, "Chat not found")
 			return
 		}
